Fixed the center alignment of the container

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,12 +8,11 @@ body {
   margin: auto;
 }
 
-body .card-container {
-  display: flex;
-  justify-content: space-around;
-}
-
 .card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   background-color: hsl(244, 38%, 16%);
   max-width: 1000px;
   border-radius: 8px;
